--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,19 +1,21 @@
-release date=12:00 01.04.2016,version=1.5.10,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
- * GH-1365: Search field should support the field term syntax in pattern mode
- * GH-1363: Subqueries (filters) should be processed in parallels using threads
- * GH-1361: Faster cache implementation
- * GH-1336: URL fragments filtering
- * GH-1332: REST API - More information about Indexes
- * GH-1255: Query - send batch
- * GH-1253: Term filter - it should be possible to use operator OR
- * GH-1213: Renderer - ability to choose to reset facets when a new search is made
- * GH-1290: Scheduler - add a task for searching, transforming and sending content
- * GH-1162: Search API - be able to give parameter for Boosting queries
- * GH-1093: Replication -  add an API to at least list existing replications
- * GH-963: Scheduler - change link to documentation for CRON expression
- * GH-923: Be able to pass variables to a database crawler via a scheduler job
- * GH-598: Support of MongoDB indexing
- * GH-298: Web crawler - crawl URL new in parallel to the old ones
- * GH-1376: The monitoring upload task uses an erroneous POST format
- * GH-1348: Some scheduler tasks cannot be stopped
- * GH-1126: Database crawler - deletion - error No field has been given
+release date=12:00 03.01.2015,version=1.5.11,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
+ * GH-1444: Add attribute option to script function XXX_IndexField
+ * GH-1443: New function AddNow in script module
+ * GH-1439: Multithreaded facets
+ * GH-1424: Change priority order with the charset detection in the HTML parser
+ * GH-1416: Add a test button in the renderer to check the authentication
+ * GH-1413: Parser for EML Mime Mail messages
+ * GH-1412: Let the parsing API decides which parser to use
+ * GH-1404: Define a per query behavior for batch of queries
+ * GH-1394: The collapsed documents should be fully visible when the size parameter is set to 0
+ * GH-1390: Search fields should grouped as boolean queries
+ * GH-1388: Analyzer: create a filter for applying various transformation to proper nouns
+ * GH-1437: Broken image in screenshot capture
+ * GH-1434: Cannot put a negative value in the geo parameters user interface
+ * GH-1430: The file crawler recursive parsing misses some files
+ * GH-1427: The LDAP and JCIFS records do not match when querying an Active Directory
+ * GH-1414: Problem with special characters encoding when editing synonyms or stopwords on Windows
+ * GH-1406: Scoring, boosting query: not working?
+ * GH-1402: Empty query is not well evaluated in Search Field
+ * GH-1400: In search requests, the "Empty return all" attribute is not persistent
+ * GH-1397: ResultSet closed error when using SQL update with the database crawler
