--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,22 @@ https://github.com/jaeksoft/opensearchserver/issues (GH)
 http://sourceforge.net/p/opensearchserve/feature-request/ (SF)
 http://sourceforge.net/p/opensearchserve/bug-report/ (SF)
 
+OpenSearchServer 1.5.14
+
+New features:
+- GH-1706: Autocompletion thread should be interruptible
+- GH-1700: Tomcat version update 7.0.68
+- GH-1689: Disabling link detection
+- GH-1676: Support of PhantomJS in the HTMLParser
+- GH-1671: Add a customizable char tokenizer
+- GH-1669: An XML/JSON API for field terms extractions
+
+Bug fixes:
+- GH-1729: org.apache.cxf.interceptor.Fault, Tomcat 7.0.53, when starting crawl
+- GH-1697: Ignored Number of suggestion for auto-completion
+- GH-1697: Scheduler URL database error
+- GH-1659: Crawler deadlocks after running while serving requests
+
 OpenSearchServer 1.5.13
 
 New features:
