--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,27 +1,11 @@
-release date=12:00 05.05.2015,version=1.5.13,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
- * GH-1653: REST Crawler - HTTP Header authentication method
- * GH-1652: REST Crawler - an integrated sequence for paginated APIs support
- * GH-1648: File event scheduler task
- * GH-1635: For SMB crawling and AD login SID should also be extracted
- * GH-1624: Add the field host in the field mapping of the file crawler
- * GH-1617: The REST crawler should support local files indexation
- * GH-1611: Support of multiple indexes
- * GH-1601: Use compressed bit set for less memory consumption
- * GH-1598: Facets can be limited in number
- * GH-1597: Facets can be sorted by term or count
- * GH-1595: Parallel sorting to better use multi-core system
- * GH-1592: The pattern inclusion API (v2) failed to inject the URLs in the URL database
- * GH-1582: Programmatically retrieving hosts from Web index
- * GH-1562: Fault tolerancy in the database crawler
- * GH-1559: Handle short date format in sitemap (yyyy-mm-dd)
- * GH-1541: Ability to disable obeying robots.txt using the API
- * GH-1537: Collapsing size to 0 merges the returned field
- * GH-1524: Add fetch size parameter in the database crawler
- * GH-1509: Hunspell native implementation is slow
- * GH-1502: A scheduler task able to launch a crawl script
- * GH-1494: Error HttpHostConnectException should not abort the crawl session 
- * GH-1480: Multithreaded OCR 
- * GH-1476: New index template for credentials storing
- * GH-1475: Add an encryption filter 
- * GH-1471: Authentication based on external index
- * GH-1470: Renderer: Add range to date facet
+release date=12:00 04.04.2016,version=1.5.14,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
+ * GH-1729: org.apache.cxf.interceptor.Fault, Tomcat 7.0.53, when starting crawl
+ * GH-1706: Autocompletion thread should be interruptible
+ * GH-1700: Tomcat version update 7.0.68
+ * GH-1697: Ignored Number of suggestion for auto-completion
+ * GH-1696: Scheduler URL database error
+ * GH-1689: Disabling link detection
+ * GH-1676: Support of PhantomJS in the HTMLParser
+ * GH-1671: Add a customizable char tokenizer
+ * GH-1669: An XML/JSON API for field terms extractions
+ * GH-1659: Crawler deadlocks after running while serving requests
