Update change log

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -19,6 +19,7 @@ New features:
 - GH-1669: An XML/JSON API for field terms extractions
 
 Bug fixes:
+- GH-1745: Can't access "Privileges" tab in last snapshots
 - GH-1729: org.apache.cxf.interceptor.Fault, Tomcat 7.0.53, when starting crawl
 - GH-1697: Ignored Number of suggestion for auto-completion
 - GH-1697: Scheduler URL database error
