--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,6 +11,14 @@ http://sourceforge.net/p/opensearchserve/bug-report/ (SF)
 OpenSearchServer 1.5.14
 
 New features:
+- GH-1796: Silent backup replication
+- GH-1791: Disabling the Scheduler, the WebCrawler and the FileCrawler
+- GH-1780: Create a Scheduler using Rest API
+- GH-1773: Crawler - API to delete URL browser
+- GH-1768: Limit the crawl depth in the web crawler
+- GH-1756: Crawler Status for All Crawlers trough API Call
+- GH-1755: Add and Remove sitemaps from index trough the REST API / php client
+- GH-1749: Web service method for web properties
 - GH-1746: Add HTTP connection time out
 - GH-1706: Autocompletion thread should be interruptible
 - GH-1700: Tomcat version update 7.0.68
@@ -24,6 +32,7 @@ Bug fixes:
 - GH-1729: org.apache.cxf.interceptor.Fault, Tomcat 7.0.53, when starting crawl
 - GH-1697: Ignored Number of suggestion for auto-completion
 - GH-1697: Scheduler URL database error
+- GH-1674: Faulty cookie support with HttpClient
 - GH-1659: Crawler deadlocks after running while serving requests
 
 OpenSearchServer 1.5.13
