--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,21 +1,4 @@
-release date=12:00 04.04.2016,version=1.5.14,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
- * GH-1796: Silent backup replication
- * GH-1791: Disabling the Scheduler, the WebCrawler and the FileCrawler
- * GH-1780: Create a Scheduler using Rest API
- * GH-1773: Crawler - API to delete URL browser
- * GH-1768: Limit the crawl depth in the web crawler
- * GH-1756: Crawler Status for All Crawlers trough API Call
- * GH-1755: Add and Remove sitemaps from index trough the REST API / php client
- * GH-1749: Web service method for web properties
- * GH-1746: Add HTTP connection time out
- * GH-1745: Can't access Privileges tab in last snapshots
- * GH-1729: org.apache.cxf.interceptor.Fault, Tomcat 7.0.53, when starting crawl
- * GH-1706: Autocompletion thread should be interruptible
- * GH-1700: Tomcat version update 7.0.68
- * GH-1697: Ignored Number of suggestion for auto-completion
- * GH-1696: Scheduler URL database error
- * GH-1689: Disabling link detection
- * GH-1676: Support of PhantomJS in the HTMLParser
- * GH-1671: Add a customizable char tokenizer
- * GH-1669: An XML/JSON API for field terms extractions
- * GH-1659: Crawler deadlocks after running while serving requests
+release date=12:00 04.04.2016,version=1.5.15,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
+ * GH-1857: Update htmlunit
+ * GH-1843: sitemap.xml fetch frequency
+ * GH-1840: Merging index in Scheduler not exist anymore
