Implements #1870 - Crawl cache should use compression

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,6 +11,7 @@ http://sourceforge.net/p/opensearchserve/bug-report/ (SF)
 OpenSearchServer 2.0
 
 New Features:
+- GH-1870: Crawl cache should use compression
 - GH-1869: Replace CXF by Jersey
 
 Bug fixes:
