--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,13 +8,14 @@ https://github.com/jaeksoft/opensearchserver/issues (GH)
 http://sourceforge.net/p/opensearchserve/feature-request/ (SF)
 http://sourceforge.net/p/opensearchserve/bug-report/ (SF)
 
-OpenSearchServer 2.0
+OpenSearchServer 1.6
 
 New Features:
 - GH-1870: Crawl cache should use compression
 - GH-1869: Replace CXF by Jersey
 
 Bug fixes:
+- GH-1877: ClosedChannelException on Terms extraction
 - GH-1857: Update htmlunit
 - GH-1843: sitemap.xml fetch frequency
 - GH-1840: Merging index in Scheduler not exist anymore
