--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 release date=12:00 14.09.2017,version=1.6.0,urgency=low,by=Emmanuel Keller <ekeller@open-search-server.com>,distribution=unknown
+ * GH-1900: Allow leading wildcard in Pattern query
  * GH-1881: Support of array in database crawler
  * GH-1879: Parsing of BLOB in the Database crawler
  * GH-1877: ClosedChannelException on Terms extraction
